--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>NumGuess</finalName>
