--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,15 @@
       <scope>test</scope>
     </dependency>
 
+
+    <!-- notice this new dependecy -->
+
     <dependency>
       <groupId>javax.mail</groupId>
       <artifactId>mail</artifactId>
       <version>1.4</version>
     </dependency>
+
 
   </dependencies>
   <build>
